--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -35,6 +35,14 @@ body {
         }
     }
 }
+
+.breadcrumb {
+    border-top: 1px solid #D8D8D8;
+    .breadcrumb-item a {
+        color: $breadcrumb-color;
+    }
+}
+
 .content {
     flex: 1 0 auto;
 }
