add loading with scrolling in catalog

--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -107,3 +107,9 @@ footer {
         }
     }
 }
+
+.catalog-page {
+    @include media-breakpoint-up(lg) {
+        margin-bottom: 100px;
+    }
+}
