cart confirm page

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -47,7 +47,8 @@ $text-muted: #999999;
 $border-color: $body-color;
 
 $white:		#ffffff;
-$red:		#D22020;;
+$red:		#D22020;
+$secondary:	#CCCCCC;
 
 // цветовые темы
 $theme-colors: (
