--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -111,11 +111,86 @@ footer {
 .catalog-page {
     @include media-breakpoint-up(lg) {
         margin-bottom: 100px;
+    }   
+
+    .product-item {
+        @include media-breakpoint-up(md) {
+            max-width: 260px;
+        }
+    }
+}
+.filters-sidebar {
+    ul {
+        list-style-type: none;
+    }
+    .filter-block {
+        .title{
+            position: relative;
+            display: block;
+            font-size: 14px;
+            font-weight: 700;
+            text-transform: uppercase;
+            cursor: pointer;
+        }
+        .list {
+            ul {
+                width: auto;
+                max-height: 400px;
+                padding-top: 15px;
+                padding-left: 0;
+                overflow-y: auto;
+            }
+            li {
+                position: relative;
+                display: inline-block;
+                vertical-align: top;
+                width: 100%;
+            }
+        }
+        .check {
+            display: inline-block;
+            position: relative;
+            cursor: pointer;
+            user-select: none;
+            span {
+                display: inline-block;
+                vertical-align: top;
+                padding-left: 30px;
+                line-height: 22px;
+                font-size: 14px;
+            }
+        }
+        .checkmark {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 20px;
+            width: 20px;
+            background-color: transparent;
+            border: 1px solid #231f20;
+        }
+        &.categories {
+
+        }
+        &.colors {
+            .list li {
+                width: auto;
+                padding-right: 35px;
+                padding-bottom: 15px;
+                // padding: 10px;
+                // margin-top: 20px;
+            }
+            .checkmark {
+                height: 30px;
+                width: 30px;
+                border: none;
+                border-radius: 15px;
+                border: 1px solid #E8E8E8;
+            }
+        }
+        &.brand {
+            // max-height: 100px;
+        }
     }
 }
 
-.product-item {
-    @include media-breakpoint-up(md) {
-        max-width: 260px;
-    }
-}
