--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -111,11 +111,31 @@ footer {
 .catalog-page {
     @include media-breakpoint-up(lg) {
         margin-bottom: 100px;
-    }   
+    }
 
     .product-item {
+        @include media-breakpoint-down(sm) {
+            margin-bottom: 100px;
+        }
+        @include media-breakpoint-down(sm) {
+            flex: 0 0 100%;
+            max-width: 100%;
+        }
+        @include media-breakpoint-up(sm) {
+            flex: 0 0 50%;
+            max-width: 50%;
+        }
         @include media-breakpoint-up(md) {
-            max-width: 260px;
+            flex: 0 0 33.3333333333%;
+            max-width: 33.3333333333%;
+        }
+        @include media-breakpoint-up(lg) {
+            flex: 0 0 25%;
+            max-width: 25%;
+        }
+        @include media-breakpoint-up(xl) {
+            flex: 0 0 20%;
+            max-width: 20%;
         }
     }
 }
