--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -49,3 +49,6 @@
 @import 'extended'; // расширения функционала bootstrap своими классами
 @import 'navbar'; // переписан бутстраповский + стили к сайту для navbar
 @import 'styles'; // стили которые относятся исключительно к этому сайту
+
+// Fancybox
+@import 'fancybox';
