product photos slider

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -51,4 +51,5 @@
 @import 'styles'; // стили которые относятся исключительно к этому сайту
 
 // Fancybox
-@import 'fancybox';
+@import './fancybox';
+@import './slick';
