fix cursor for fancybox

--- a/resources/sass/_fancybox.scss
+++ b/resources/sass/_fancybox.scss
@@ -899,8 +899,11 @@ body.compensate-for-scrollbar {
 // my styles
 
 a[data-fancybox] {
-    cursor: zoom-in;
     &:focus {
         outline: none;
+    }
+    cursor: zoom-in;
+    img {
+        cursor: zoom-in !important;
     }
 }
