method pay & delivery

--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -298,3 +298,9 @@ footer {
     cursor: help;
     font-size: 12px;
 }
+
+.form-check {
+    .form-check-input, .form-check-label {
+        cursor: pointer;
+    }
+}
