update shops page

--- a/resources/sass/_extended.scss
+++ b/resources/sass/_extended.scss
@@ -5,5 +5,8 @@
 	}
 }
 .text-decoration-underline {
-    text-decoration: underline;
+    text-decoration: underline !important;
+}
+.cursor-pointer {
+    cursor: pointer !important;
 }
