main menu design

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,7 +17,7 @@ $headings-font-weight: 700;
 $display4-size:	2.8rem;
 
 // варианты размера шрифта
-$v-font-sizes: '12', '15', '16', '18';
+$v-font-sizes: '12', '14', '15', '16', '18';
 
 // Ссылки
 $link-color: $body-color; // цвет ссылок
