--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -65,9 +65,6 @@
     }
 }
 .navbar-main-menu {
-    .col-12 {
-        position: static;
-    }
     letter-spacing: 0.3px;
     @include media-breakpoint-down(md) {
         width: 300px;
@@ -90,17 +87,55 @@
     }
 }
 
-
-.hover-dropdown {
-    cursor: pointer;
-    &:hover {
-        .dropdown-menu {
-            display: block; 
-        }
+.custom-dropdown-menu {
+    position: absolute;
+    margin-top: -2px;
+    top: 100%;
+    left: 0;
+    z-index: 10;
+    background-color: #ffffff;
+    border-radius: 0.25rem;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.2s;
+    height: 465px;
+    @media screen and (min-width: 1200px) {
+        height: 370px;
+    }
+    .static-pages-menu-item {
+        padding-left: 27%;
     }
 }
 
-// !!! убрать hover для моб версии
+.backdrop {
+    z-index: 5;
+    position: fixed;
+    left: -100%;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
+    opacity: 0;
+    transition: opacity 0.2s ease;
+}
+
+.hover-dropdown {
+    cursor: pointer;
+    @include media-breakpoint-up(lg) {
+        &:hover {
+            z-index: 10;
+            background-color: #ffffff;
+            .custom-dropdown-menu {
+                visibility: visible;
+                opacity: 1;
+            }
+            + .backdrop {
+                left: 0;
+                opacity: 1;
+            }
+        }
+    }
+}
 
 // header {
 //     @include media-breakpoint-down(md) {
