play video button

--- a/resources/sass/_styles.scss
+++ b/resources/sass/_styles.scss
@@ -373,3 +373,13 @@ footer {
         cursor: pointer;
     }
 }
+
+span.youtube-play-icon {
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin:-16px 0 0 -16px;
+    height:32px;
+    width:32px;
+    content: url(/images/icons/youtube-play-button.svg);
+}
