--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -81,7 +81,7 @@
             left: 0;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
         };
-        .row {
+        .navbar-container {
             padding: 60px 20px 0;
         }
     }
