fix reset filters btn

--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -222,7 +222,7 @@ footer {
         .checkmark {
             height: 20px;
             width: 20px;
-            border: 1px solid #231f20;
+            border: 1px solid #E8E8E8;
         }
         &.categories {
 
