--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -129,7 +129,7 @@ footer {
             flex: 0 0 33.3333333333%;
             max-width: 33.3333333333%;
         }
-        @include media-breakpoint-up(lg) {
+        @media (min-width: 1360px) {
             flex: 0 0 25%;
             max-width: 25%;
         }
