--- a/src/resources/sass/admin/admin.scss
+++ b/src/resources/sass/admin/admin.scss
@@ -24,3 +24,8 @@
     width: 185px;
     height: 130px;
 }
+
+.sortable-ghost {
+    border: 1px solid rgba(50, 40, 250, 0.6) !important;
+    box-shadow: 0 0 10px 0 rgba(50, 40, 250, 0.6) !important;
+}
