save cropped images enable

--- a/src/resources/templates/admin/image-preview.html
+++ b/src/resources/templates/admin/image-preview.html
@@ -1,6 +1,7 @@
 <div class="file-preview-frame krajee-default">
+    <!-- <input type="hidden" name="add_images[]" value="{{{ src }}}"> -->
     <div class="shop-file-content">
-        <img src="{{ img_thumb }}"
+        <img src="{{{ src }}}"
             class="file-preview-image kv-preview-data"
             style="max-width:100%;max-height:100%;">
     </div>
@@ -10,11 +11,11 @@
         </div>
         <div class="file-actions">
             <div class="shop-file-footer-buttons">
-                <button type="button" data-id="{{ img_id }}"
+                <button type="button"
                     class="kv-file-remove btn btn-sm btn-kv btn-default btn-outline-secondary">
                     <i class="glyphicon glyphicon-trash"></i>
                 </button>
-                <a data-fancybox="single" data-src="{{ img_full }}"
+                <a data-fancybox="single" data-src="{{{ src }}}"
                     class="kv-file-zoom btn btn-sm btn-kv btn-default btn-outline-secondary">
                     <i class="glyphicon glyphicon-zoom-in"></i>
                 </a>
