--- a/src/resources/templates/admin/image-preview.html
+++ b/src/resources/templates/admin/image-preview.html
@@ -6,8 +6,8 @@
             style="max-width:100%;max-height:100%;">
     </div>
     <div class="file-thumbnail-footer">
-        <div class="file-footer-caption" title="{{ img_name }}">
-            <div class="file-caption-info">{{ img_name }}</div>
+        <div class="file-footer-caption" title="{{ name }}">
+            <div class="file-caption-info">{{ name }}</div>
         </div>
         <div class="file-actions">
             <div class="shop-file-footer-buttons">
