finish frontend sorting

--- a/src/resources/templates/admin/image-preview.html
+++ b/src/resources/templates/admin/image-preview.html
@@ -1,5 +1,4 @@
-<div class="file-preview-frame krajee-default">
-    <!-- <input type="hidden" name="add_images[]" value="{{{ src }}}"> -->
+<div class="file-preview-frame krajee-default" data-id="{{ id }}">
     <div class="shop-file-content">
         <img src="{{{ src }}}"
             class="file-preview-image kv-preview-data"
