--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -392,3 +392,11 @@ span.youtube-play-icon {
     width:32px;
     content: url(/images/icons/youtube-play-button.svg);
 }
+
+.grecaptcha-badge { visibility: hidden; }
+.btn-disabled-load {
+    background-color: #767676 !important;
+    cursor: wait;
+}
+
+// jdiv { display: none !important; }
