accessibility for screen reader

--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -433,4 +433,13 @@ span {
     }
 }
 
+.visually-hidden {
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px, 1px, 1px, 1px);
+    white-space: nowrap; /* added line */
+}
+
 // jdiv { display: none !important; }
