favorites in index sliders & in recommended

--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -458,4 +458,9 @@ span {
     }
 }
 
+.cart-done-recommended {
+    .product-item {
+        max-width: 180px;
+    }
+}
 // jdiv { display: none !important; }
