show favorites on favorite page

--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -108,7 +108,7 @@ footer {
     }
 }
 
-.catalog-page {
+.catalog-page, .favorites-page {
     @include media-breakpoint-up(lg) {
         margin-bottom: 100px;
     }
