--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -464,6 +464,9 @@ span {
     top: 0;
     right: 0;
     z-index: 20;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 .product-label {
     color: $white;
