css hide description delivery/payment in cart & installment 2 or 3 (product and cart)

--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -383,6 +383,17 @@ button.scroll-top-btn {
     }
 }
 
+/* скрывающиеся подсказки в корзине*/
+
+label.form-check-label span {
+    display: none;
+}
+
+input.form-check-input:checked ~ label.form-check-label span {
+    display: block;
+}
+
+
 span.youtube-play-icon {
     position:absolute;
     top:50%;
