minor css & text change

--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -146,6 +146,8 @@ footer {
     }
 }
 
+.product-item .product-first-image, .product-item .product-second-image {width: 100%;}
+
 button.scroll-top-btn {
     position: fixed;
     padding: 0;
