--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -61,3 +61,6 @@
 @import '~swiper/swiper-bundle.css';
 @import '_swiper';
 @import 'shop/product';
+
+// Specific page's styles
+@import 'pages/cart';
