payment sms log && fix banner timer styles

--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -60,6 +60,9 @@
 // Swiper
 @import '~swiper/swiper-bundle.css';
 @import '_swiper';
+
+@import 'banners/banner-timer';
+
 @import 'shop/product';
 
 // Specific page's styles
