popup offer to register

--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -1,21 +1,16 @@
 
-.test-roboto {
+.font-roboto {
     font-family: 'Roboto';
 }
-
-.test-popins {
+.font-popins {
     font-family: 'Poppins';
 }
-
-.test-gilroy {
+.font-gilroy {
     font-family: 'Gill Sans MT';
 }
-
-.test-gill-sans-mt {
+.font-gill-sans-mt {
     font-family: 'Gilroy';
 }
-
-
 
 html, body {
     height: 100%;
