improvements & refactor feedbacks

--- a/src/resources/sass/_variables.scss
+++ b/src/resources/sass/_variables.scss
@@ -49,6 +49,7 @@ $border-color: $body-color;
 $white:		#ffffff;
 $red:		#D22020;
 $secondary:	#CCCCCC;
+$light:     #FBFBFD;
 
 // цветовые темы
 $theme-colors: (
