--- a/src/resources/sass/shop/product.scss
+++ b/src/resources/sass/shop/product.scss
@@ -1,28 +1,110 @@
 .p-product {
-  width: 100%;
+    width: 100%;
 
-  &__prGroup {
-    margin: 40px 0;
+    &__slider {
+        position: relative;
+        flex-direction: column;
+        display: flex;
+        gap: 15px;
 
-    &-title {
-      font-size: 16px;
-      line-height: 100%;
-      margin-bottom: 22px;
-      font-weight: 400;
-      color: #767676;
+        &-min {
+            width: 100%;
+            overflow: hidden;
+            order: 3;
+
+            .swiper {
+                max-height: 100%;
+                width: 100%;
+                height: 100%;
+            }
+
+            .swiper-vertical .swiper-wrapper {
+                position: absolute;
+            }
+
+            .swiper-slide {
+                // background: red;
+                // padding: 2px;
+                width: 100px;
+                height: 100px;
+
+                img {
+                    width: 100%;
+                }
+            }
+        }
+
+        &-main {
+            order: 2;
+            max-width: 100%;
+            flex: 1;
+            overflow: hidden;
+            position: relative;
+
+            .btn-favorite {
+                z-index: 2;
+            }
+
+            .swiper-slide {
+                height: auto;
+            }
+
+            iframe {
+                width: 100%;
+                height: 100%;
+                pointer-events: none;
+            }
+        }
+
+        &-youtubeIcon {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateY(-50%) translateX(-50%);
+            height: 32px;
+            width: 32px;
+            content: url(/images/icons/youtube-play-button.svg);
+        }
     }
-    &-item {
-      width: 150px;
-      max-width: 150px;
-      padding: 5px;
-      height: auto;
 
-      img {
-        width: 100%;
-      }
-      &.active {
-        border: 1px solid #000;
-      }
+    &__prGroup {
+        margin: 40px 0;
+
+        &-title {
+            font-size: 16px;
+            line-height: 100%;
+            margin-bottom: 22px;
+            font-weight: 400;
+            color: #767676;
+        }
+
+        &-item {
+            width: 150px;
+            max-width: 150px;
+            padding: 5px;
+            height: auto;
+
+            img {
+                width: 100%;
+            }
+
+            &.active {
+                border: 1px solid #000;
+            }
+        }
     }
-  }
+}
+
+@media (min-width: 1024px) {
+    .p-product {
+
+        &__slider {
+            flex-direction: row;
+
+            &-min {
+                width: 100px;
+                order: 1;
+            }
+        }
+    }
 }
