--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -405,6 +405,23 @@ input.form-check-input:checked ~ label.form-check-label span {
     display: block;
 }
 
+span {
+    &.youtube-play-icon, &.video-play-button {
+        position:absolute;
+        top:50%;
+        left:50%;
+        margin:-16px 0 0 -16px;
+        height:32px;
+        width:32px;
+    }
+    &.youtube-play-icon {
+        content: url(/images/icons/youtube-play-button.svg);
+    }
+    &.video-play-button {
+        content: url(/images/icons/video-play-button.svg);
+    }
+}
+
 .btn-disabled-load {
     background-color: #767676 !important;
     cursor: wait;
