--- a/src/resources/sass/includes/header.scss
+++ b/src/resources/sass/includes/header.scss
@@ -159,7 +159,7 @@
                 }
 
                 a {
-                    display: inline-flex;
+                    display: flex;
                     text-transform: uppercase;
                 }
             }
